enhanced plugin loader (takes a directory from config), and implementation of extreme DOI validation - format validation, and relatity validation, but also pull data from crossref and implement comparators to match across all other fields in the example publications record

--- a/metatool/templates/results.html
+++ b/metatool/templates/results.html
@@ -71,6 +71,19 @@ thead {
     font-weight: bold;
 }
 
+.successful_crossref_entries {
+    
+}
+
+.successful_crossref_entry {
+    font-weight: bold;
+}
+
+.successful_crossref_prov {
+    font-style: italic;
+    color: #cccccc;
+}
+
 .alternative_option {
     font-weight: bold;
 }
