--- a/metatool/templates/results.html
+++ b/metatool/templates/results.html
@@ -42,7 +42,7 @@ thead {
 }
 
 .pass_warn {
-    color: #ffff00;
+    color: #FF9500;
     font-weight: bold;
 }
 
@@ -77,6 +77,11 @@ thead {
 
 .successful_crossref_entry {
     font-weight: bold;
+}
+
+.successful_crossref_comparator {
+    font-style: italic;
+    color: #cccccc;
 }
 
 .successful_crossref_prov {
@@ -122,7 +127,7 @@ thead {
 
 .warn_message {
     font-weight: bold;
-    color: #aa00aa;
+    color: #FF9500;
 }
 
 .warn_prov {
