--- a/metatool/templates/viz.html
+++ b/metatool/templates/viz.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <script type="text/javascript" src="/static/d3.js"></script>
     <script type="text/javascript" src="/static/d3.layout.js"></script>
+    
+    <!-- get bootstrap js and css -->
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
+    
     <style type="text/css">
 
 
@@ -28,6 +33,12 @@ path.link {
     </style>
   </head>
   <body>
+  
+  <div class="hero-unit">
+    <h1><a href="{{baseurl}}">metatool</a></h1>
+    <h2>making metadata better data</h2>
+  </div>
+  
     <div id="model"></div>
     <script type="text/javascript">
 
