--- a/metatool/templates/results.html
+++ b/metatool/templates/results.html
@@ -3,6 +3,10 @@
 <head>
 <title>metatool - results</title>
 
+<!-- get bootstrap js and css -->
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>    
+
 <style type="text/css">
 
 table {
@@ -151,9 +155,19 @@ thead {
 
 <body>
 
+<div class="hero-unit">
+    <h1><a href="{{baseurl}}">metatool</a></h1>
+    <h2>making metadata better data</h2>
+  </div>
+
+<div class="row-fluid">
+<div class="span1">&nbsp;</div>
+<div class="span10">
 {% autoescape false %}
 {{tables}}
 {% endautoescape %}
+</div>
+</div>
 
 </body>
 
