add link to ACAT to homepage; prettify ACAT facetview a bit more

--- a/metatool/templates/acat_search.html
+++ b/metatool/templates/acat_search.html
@@ -56,37 +56,39 @@ size: 10
 result_display: [
 [
 {
-    "pre": "<strong>Journal Title</strong>: ",
+    "pre": "<em>Journal Title</em>: <strong>",
     "field": "journal_title",
+    "post": "</strong>"
 }
 ],
     [
 {
-    "pre": "Journal Abbreviation: ",
+    "pre": "<em>Journal Abbreviation: </em>",
     "field": "journal_abbreviation",
 }
 ],
     [
 {
-    "pre": "<u>Publisher</u>: ",
+    "pre": "<em>Publisher</em>: <u>",
     "field": "publisher_name",
+    "post": "</u>"
 }
 ],
     [
 {
-    "pre": "ISSN: ",
+    "pre": "<em>ISSN: </em>",
     "field": "issn",
 }
 ],
     [
 {
-    "pre": "Electronic ISSN: ",
+    "pre": "<em>Electronic ISSN: </em>",
     "field": "electronic_issn",
 }
 ],
     [
 {
-    "pre": "Print ISSN: ",
+    "pre": "<em>Print ISSN: </em>",
     "field": "print_issn",
 }
 ],
