--- a/metatool/templates/index.html
+++ b/metatool/templates/index.html
@@ -16,7 +16,7 @@
 
 <div class="row-fluid">
     <div class="span1">&nbsp;</div>
-    <div class="span5">
+    <div class="span4">
         <h2>Validate</h2>
 
         <form action="/validate" method="POST" enctype=multipart/form-data>
@@ -39,7 +39,7 @@
         </form>
     </div>
 
-    <div class="span5">
+    <div class="span4">
         <h2>Visualise</h2>
         <form action="/visualise" method="POST" enctype=multipart/form-data>
             <p>
@@ -71,6 +71,10 @@
             
 
         </form>
+    </div>
+    <div class="span2">
+        <h2>ACAT</h2>
+        <a href="/acat">Browse and Search ACAT - the Academic Catalogue</a>
     </div>
 </div>
 
