fix links to test file

--- a/metatool/templates/index.html
+++ b/metatool/templates/index.html
@@ -34,7 +34,7 @@
             <p><strong>or try one of these examples:</strong></p>
             
             <ul>
-                <li><a href="/validate?url={{baseurl}}/static/ukriss_outputs.xml&modeltype=ukriss_outputs">Publications Outputs</a>&nbsp;[<a href="/static/ukriss_outputs.xml">download source file</a>]</li>
+                <li><a href="/validate?url=https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml&modeltype=ukriss_outputs">Publications Outputs</a>&nbsp;[<a href="https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml">download source file</a>]</li>
             </ul>
         </form>
     </div>
@@ -56,7 +56,7 @@
             <p><strong>or try one of these examples:</strong></p>
             
             <ul>
-                <li><a href="/visualise?url={{baseurl}}/static/ukriss_outputs.xml&modeltype=ukriss_outputs">Publications Outputs</a>&nbsp;[<a href="/static/ukriss_outputs.xml">download source file</a>]</li>
+                <li><a href="/visualise?url=https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml&modeltype=ukriss_outputs">Publications Outputs</a>&nbsp;[<a href="https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml">download source file</a>]</li>
                 
                 <li><a href="/visualise?url=http://www.eurocris.org/Uploads/Web%20pages/CERIF-1.6/REF_submissionInCERIFXML_CommonFields.xml&modeltype=ukriss_outputs">REF Submission Common Fields</a>&nbsp;[<a href="http://www.eurocris.org/Uploads/Web%20pages/CERIF-1.6/REF_submissionInCERIFXML_CommonFields.xml">download source file</a>]</li>
                 
