next version of visualisation - works, but not plumbed into front end

--- a/metatool/templates/index.html
+++ b/metatool/templates/index.html
@@ -53,7 +53,7 @@
             
             <p><input type="submit" name="submit_model" value="Visualise!"></p>
             
-            <p><strong>or try one of these examples:</strong></p>
+            <p><strong>or try one of these tree viewer examples:</strong></p>
             
             <ul>
                 <li><a href="/visualise?url=https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml&modeltype=ukriss_outputs">Publications Outputs</a>&nbsp;[<a href="https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml">download source file</a>]</li>
@@ -69,7 +69,12 @@
                 <li><a href="/visualise?url=http://www.eurocris.org/Uploads/Web%20pages/CERIF-1.6/REF_submissionInCERIFXML_Impact_and_Contacts.xml&modeltype=ukriss_outputs">REF Submission Impact and Contacts</a>&nbsp;[<a href="http://www.eurocris.org/Uploads/Web%20pages/CERIF-1.6/REF_submissionInCERIFXML_Impact_and_Contacts.xml">download source file</a>]</li>
             </ul>
             
-
+            <p><strong>or try one of these cerifeye examples:</strong></p>
+            
+            <ul>
+                <li><a href="/cerifeye?url=https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml&modeltype=ukriss_outputs">Publications Outputs</a>&nbsp;[<a href="https://dl.dropboxusercontent.com/u/15114846/ukriss_outputs.xml">download source file</a>]</li>
+            </ul>
+            
         </form>
     </div>
     <div class="span2">
