test data generation and facetview aggregation example

--- a/metatool/templates/index.html
+++ b/metatool/templates/index.html
@@ -78,8 +78,17 @@
         </form>
     </div>
     <div class="span2">
-        <h2>ACAT</h2>
-        <a href="/acat">Browse and Search ACAT - the Academic Catalogue</a>
+        <div class="row-fluid">
+            <div>
+                <h2>ACAT</h2>
+                <a href="/acat">Browse and Search ACAT - the Academic Catalogue</a>
+            </div>
+            <div style="margin-top:2em;">
+                <h2>Aggregation example</h2>
+                <p><a href="/aggregate/publications">View the Aggregation example with a test dataset</a></p>
+                <p><a href="/aggregate/publications/generate">Regenerate the UKRISS test dataset</a></p>
+            </div>
+        </div>
     </div>
 </div>
 
