--- a/metatool/templates/acat_search.html
+++ b/metatool/templates/acat_search.html
@@ -37,7 +37,7 @@
             jQuery(document).ready(function($) {
 
                     $('.facet-view-simple').facetview({
-search_url: 'http://{{ es_host }}/{{ es_index }}/journal/_search?',
+search_url: '{{ es_host }}/{{ es_index }}/journal/_search?',
 search_index: 'elasticsearch',
 datatype: 'json',
 
